@@ -1,6 +1,8 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2
 
+* baselayout-1.13.0_alpha12 (17 Jan 2006)
+
   16 Jan 2007; Roy Marples <uberlord@gentoo.org>:
 
     rc now stops services that are "starting" when in the stopping phase.
